Fixed landmarks points movement

--- a/public/index.html
+++ b/public/index.html
@@ -208,7 +208,7 @@
                         </div>
                     </div>
                     <div class="legend-note">
-                        <p>💡 <strong>Note:</strong> Reps counter increases for both arms or single arm movement</p>
+                        <p>💡 <strong>Note:</strong> Left/right now correctly match your body sides on screen</p>
                         <p>Camera view is mirrored for natural movement perception</p>
                     </div>
                 </div>
@@ -217,7 +217,7 @@
 
         <footer>
             <p>Dual Arm Angle Tracking | Combined Rep Counting | Mirror View Enabled</p>
-            <p class="footer-note">Counts reps for both arms together or individually</p>
+            <p class="footer-note">Left/right correctly mapped to your actual body sides</p>
         </footer>
     </div>
 
