Updated files for landmarks points error

--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
             <!-- Video Feed -->
             <div class="video-section">
                 <div class="video-container">
-                    <!-- Added scaleX(-1) for mirror view -->
+                    <!-- Mirror view for natural perception -->
                     <video id="webcam" autoplay playsinline muted></video>
                     <canvas id="overlayCanvas"></canvas>
 
